# goldcrest-vp

./: .gitignore  CMakeLists.txt  README.md
cmake/: goldcrest-vpCOnfig.cmake
inc/: core.hpp  elf_loader.hpp  memory.hpp  microcode.hpp  riscv.hpp
microcode/: bitops.hpp  bitops.sl  compliant.hpp  compliant.sl
src/: core.cpp  main.cpp  memory.cpp  microcode.cpp  riscv.cpp  time_model.cpp
subleq-mode/: README.md  subleq.el
sw/: Makefile
sw/ackermann/: Makefile  bootstrap.S  main.c
sw/aoc1/: Makefile  convert.py  data.s  main.S
sw/asm-add/: main.S
sw/asm-auipc/: Makefile  main.S
sw/asm-beq/: main.S
sw/asm-bge/: main.S
sw/asm-bgeu/: main.S
sw/asm-bltu/: main.S
sw/asm-bne/: main.S
sw/asm-jal/: main.S
sw/asm-jalr/: main.S
sw/asm-sll/: main.S
sw/asm-slli/: main.S
sw/asm-slt/: main.S
sw/asm-srai/: main.S
sw/asm-srli/: main.S
sw/asm-sub/: main.S
sw/asm-sw/: main.S
sw/asm-xor/: main.S
sw/bitinsert/: .gitignore  main.c
sw/bubblesort/: .gitignore  Makefile  main.c
sw/dijkstra/: Makefile  bootstrap.S  main.c
sw/heapsort/: .gitignore  bootstrap.S  main.c
sw/mandelbrot/: .gitignore  Makefile  main.c
sw/print-str/: main.S
sw/ref-test1/: .gitignore  Makefile  bootstrap.S  main.c
sw/sieve/: main.c
sw/util/: Makefile  main.S  print.S
